@@ -1,5 +1,11 @@
 2004-03-28  Elliott Hughes  <enh@acm.org>
 
+	* src/decl.cpp: Compiling GNU Classpath from CVS and looking at Jikes'
+	complaints was a good reminder that we shouldn't warn about hiding of
+	the serialVersionUID field; that's the way it's supposed to be used.
+
+2004-03-28  Elliott Hughes  <enh@acm.org>
+
 	* src/init.cpp: Warn about non-static final fields initialized by a
 	constant expression; these can be made static to save space in each
 	instance.
